resources/css/foundation.css
/* 
https://github.com/zurb/foundation-emails/releases/tag/v2.2.1
2.2.1 
July 1, 2016
*/
.wrapper {
  width: 100%; }

#outlook a {
  padding: 0; }

body {
  width: 100% !important;
  min-width: 100%;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  margin: 0;
  Margin: 0;
  padding: 0;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box; }

.ExternalClass {
  width: 100%; }
  .ExternalClass,
  .ExternalClass p,
  .ExternalClass span,
  .ExternalClass font,
  .ExternalClass td,
  .ExternalClass div {
    line-height: 100%; }

#backgroundTable {
  margin: 0;
  Margin: 0;
  padding: 0;
  width: 100% !important;
  line-height: 100% !important; }

img {
  outline: none;
  text-decoration: none;
  -ms-interpolation-mode: bicubic;
  width: auto;
  max-width: 100%;
  clear: both;
  display: block; }

center {
  width: 100%;
  min-width: 580px; }

a img {
  border: none; }

p {
  margin: 0 0 0 10px;
  Margin: 0 0 0 10px; }

table {
  border-spacing: 0;
  border-collapse: collapse; }

td {
  word-wrap: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  hyphens: auto;
  border-collapse: collapse !important; }

table, tr, td {
  padding: 0;
  vertical-align: top;
  text-align: left; }

@media only screen {
  html {
    min-height: 100%;
    background: #f3f3f3; } }

table.body {
  background: #f3f3f3;
  height: 100%;
  width: 100%; }

table.container {
  background: #fefefe;
  width: 580px;
  margin: 0 auto;
  Margin: 0 auto;
  text-align: inherit; }

table.row {
  padding: 0;
  width: 100%;
  position: relative; }

table.spacer {
  width: 100%; }
  table.spacer td {
    mso-line-height-rule: exactly; }

table.container table.row {
  display: table; }

td.columns,
td.column,
th.columns,
th.column {
  margin: 0 auto;
  Margin: 0 auto;
  padding-left: 16px;
  padding-bottom: 16px; }
  td.columns .column,
  td.columns .columns,
  td.column .column,
  td.column .columns,
  th.columns .column,
  th.columns .columns,
  th.column .column,
  th.column .columns {
    padding-left: 0 !important;
    padding-right: 0 !important; }
    td.columns .column center,
    td.columns .columns center,
    td.column .column center,
    td.column .columns center,
    th.columns .column center,
    th.columns .columns center,
    th.column .column center,
    th.column .columns center {
      min-width: none !important; }

td.columns.last,
td.column.last,
th.columns.last,
th.column.last {
  padding-right: 16px; }

td.columns table:not(.button),
td.column table:not(.button),
th.columns table:not(.button),
th.column table:not(.button) {
  width: 100%; }

td.large-1,
th.large-1 {
  width: 32.33333px;
  padding-left: 8px;
  padding-right: 8px; }

td.large-1.first,
th.large-1.first {
  padding-left: 16px; }

td.large-1.last,
th.large-1.last {
  padding-right: 16px; }

.collapse > tbody > tr > td.large-1,
.collapse > tbody > tr > th.large-1 {
  padding-right: 0;
  padding-left: 0;
  width: 48.33333px; }

.collapse td.large-1.first,
.collapse th.large-1.first,
.collapse td.large-1.last,
.collapse th.large-1.last {
  width: 56.33333px; }

td.large-1 center,
th.large-1 center {
  min-width: 0.33333px; }

.body .columns td.large-1,
.body .column td.large-1,
.body .columns th.large-1,
.body .column th.large-1 {
  width: 8.33333%; }

td.large-2,
th.large-2 {
  width: 80.66667px;
  padding-left: 8px;
  padding-right: 8px; }

td.large-2.first,
th.large-2.first {
  padding-left: 16px; }

td.large-2.last,
th.large-2.last {
  padding-right: 16px; }

.collapse > tbody > tr > td.large-2,
.collapse > tbody > tr > th.large-2 {
  padding-right: 0;
  padding-left: 0;
  width: 96.66667px; }

.collapse td.large-2.first,
.collapse th.large-2.first,
.collapse td.large-2.last,
.collapse th.large-2.last {
  width: 104.66667px; }

td.large-2 center,
th.large-2 center {
  min-width: 48.66667px; }

.body .columns td.large-2,
.body .column td.large-2,
.body .columns th.large-2,
.body .column th.large-2 {
  width: 16.66667%; }

td.large-3,
th.large-3 {
  width: 129px;
  padding-left: 8px;
  padding-right: 8px; }

td.large-3.first,
th.large-3.first {
  padding-left: 16px; }

td.large-3.last,
th.large-3.last {
  padding-right: 16px; }

.collapse > tbody > tr > td.large-3,
.collapse > tbody > tr > th.large-3 {
  padding-right: 0;
  padding-left: 0;
  width: 145px; }

.collapse td.large-3.first,
.collapse th.large-3.first,
.collapse td.large-3.last,
.collapse th.large-3.last {
  width: 153px; }

td.large-3 center,
th.large-3 center {
  min-width: 97px; }

.body .columns td.large-3,
.body .column td.large-3,
.body .columns th.large-3,
.body .column th.large-3 {
  width: 25%; }

td.large-4,
th.large-4 {
  width: 177.33333px;
  padding-left: 8px;
  padding-right: 8px; }

td.large-4.first,
th.large-4.first {
  padding-left: 16px; }

td.large-4.last,
th.large-4.last {
  padding-right: 16px; }

.collapse > tbody > tr > td.large-4,
.collapse > tbody > tr > th.large-4 {
  padding-right: 0;
  padding-left: 0;
  width: 193.33333px; }

.collapse td.large-4.first,
.collapse th.large-4.first,
.collapse td.large-4.last,
.collapse th.large-4.last {
  width: 201.33333px; }

td.large-4 center,
th.large-4 center {
  min-width: 145.33333px; }

.body .columns td.large-4,
.body .column td.large-4,
.body .columns th.large-4,
.body .column th.large-4 {
  width: 33.33333%; }

td.large-5,
th.large-5 {
  width: 225.66667px;
  padding-left: 8px;
  padding-right: 8px; }

td.large-5.first,
th.large-5.first {
  padding-left: 16px; }

td.large-5.last,
th.large-5.last {
  padding-right: 16px; }

.collapse > tbody > tr > td.large-5,
.collapse > tbody > tr > th.large-5 {
  padding-right: 0;
  padding-left: 0;
  width: 241.66667px; }

.collapse td.large-5.first,
.collapse th.large-5.first,
.collapse td.large-5.last,
.collapse th.large-5.last {
  width: 249.66667px; }

td.large-5 center,
th.large-5 center {
  min-width: 193.66667px; }
/* ... */

